INCLUDE_DIRECTORIES (${BOTAN_BUNDLED_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${SRTP_BUNDLED_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${CONFUSE_BUNDLED_INCLUDE_DIRS})

ADD_SUBDIRECTORY(di_log)
ADD_SUBDIRECTORY(prometheus_exporter)
ADD_SUBDIRECTORY(options_prober)

IF(LIBEV_FOUND)
    ADD_SUBDIRECTORY(jsonrpc)
ENDIF(LIBEV_FOUND)

IF(LAME_FOUND)
    ADD_SUBDIRECTORY(mp3)
ENDIF(LAME_FOUND)

ADD_SUBDIRECTORY(http)
ADD_SUBDIRECTORY(s3_client)
ADD_SUBDIRECTORY(redis)
ADD_SUBDIRECTORY(postgresql)
ADD_SUBDIRECTORY(postgresql_proxy)
ADD_SUBDIRECTORY(bus_client)
ADD_SUBDIRECTORY(sctp_bus)
ADD_SUBDIRECTORY(conference_mixer)
ADD_SUBDIRECTORY(radius_client)
ADD_SUBDIRECTORY(registrar_client)
ADD_SUBDIRECTORY(registrar)
ADD_SUBDIRECTORY(identity_validator)

cmake_host_system_information(RESULT DIST_VERSION QUERY DISTRIB_VERSION_ID)
IF(DIST_VERSION GREATER 12)
    # skip packet_filter building for debian <= bookworm. it has no BPF_MAP_TYPE_ARENA support
ADD_SUBDIRECTORY(packet_filter)
ENDIF()
